# QueryCraft

./: .env.template  .gitignore  Dockerfile  README.md  docker-compose.gpu.yml  docker-compose.yml  entrypoint.sh  info.md  manage.py  ollama_entrypoint.sh  pyproject.toml
.github/workflows/: check_homepage.yml
query_api/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
query_api/management/commands/: create_superuser.py  seed_db.py
query_api/migrations/: 0001_initial.py  0002_order_order_status_valid.py
querycraft/: asgi.py  settings.py  urls.py  wsgi.py
sql_agent/: exceptions.py  graph.py  models.py  orchestrator.py  tests.py  utils.py
sql_agent/repositories/: base.py  exceptions.py  factory.py  postgres_repository.py  sqlite_repository.py
sql_agent/sql_coder/: generator.py  sql_correction_prompt_template.md  sql_generation_prompt_template.md
ui/: urls.py  views.py
ui/templates/: index.html
